Fixed paths and made consistancy changes

--- a/app/how_it_works.html
+++ b/app/how_it_works.html
@@ -77,7 +77,7 @@
     <p>We believe that we can help couples learn about each other.
     Many times, we believe that we are doing loving acts for our partner, but in actuality we are not speaking
     their love language.</p>
-    <p><img class="img-responsive" src="img/1551-crazy_cycle.png"></p>
+    <p><img class="img-responsive" src="images/1551-crazy_cycle.png"></p>
 
     <h3>Your data</h3>
     <ul>
