--- a/app/Profile.html
+++ b/app/Profile.html
@@ -9,24 +9,21 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css">
-
     <!-- Custom Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-          rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
-          rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css"
-          type="text/css"/>
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css"/>
 
 
-    <!-- Plugin CSS -->
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="styles/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
-
-    <!-- Custom CSS -->
     <link rel="stylesheet" href="styles/creative.css" type="text/css">
+    <!-- endbower -->
+    <!-- endbuild -->
 
 </head>
 
@@ -118,21 +115,14 @@
     </div>
 </header>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-
-<!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/jquery.fittext.js"></script>
-<script src="js/wow.min.js"></script>
-
-<!-- Custom Theme JavaScript -->
-<script src="js/creative.js"></script>
-
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script>
@@ -175,7 +165,13 @@
 </script>
 
 <!-- build:js scripts/main.js -->
-<script src="scripts/profile.js"></script>
+<script src="scripts/main.js"></script>
+<script src="scripts/creative.js"></script>
+<script src="scripts/jquery.easing.min.js"></script>
+<script src="scripts/jquery.fittext.js"></script>
+<script src="scripts/wow.min.js"></script>
 <!-- endbuild -->
+
+</body>
 
 </html>
