It's not working

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 
 </script>
 
-<!-- build:js scripts/main.js -->
+<!-- build:js scripts/index.js -->
 <script src="scripts/index.js"></script>
 <!-- endbuild -->
 
