Wording changes per Bob

--- a/app/journal.html
+++ b/app/journal.html
@@ -73,7 +73,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-          <p>What are you giving your partner credit for and how did it speak to you.</p>
+          <p>What are you giving your partner credit for and how did it speak to you?</p>
           <h2>Journal Entry</h2>
           <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
             <div class="col-lg-2"></div>
