--- a/app/welcome.html
+++ b/app/welcome.html
@@ -95,8 +95,7 @@
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    Love Treasury is just the perfect tool to tell your partner how much you appreciate them.
-                    Write in your journal what speaks love to  you.
+                    Love Treasury is just the perfect tool to tell your partner how much you appreciate them. Write in your journal often or daily to tell them the things they have done that spoke love to you.
                 </p>
             </div>
         </div>
