--- a/app/LinkProfile.html
+++ b/app/LinkProfile.html
@@ -77,22 +77,18 @@
             <div class="row">
                 <div class="col-lg-3 col-sm-4 col-md-3"></div>
                 <div class="col-lg-6 col-sm-4 col-md-6">
-                    <h1>Profile</h1>
-                    <form id="profile" action="/profiles" method="post" accept-charset="utf-8">
+                    <h2>Partner</h2>
+                    <p>Link or invite your partner to join. This is so that each of you can put credits into each others
+                        bank.</p>
+                    <div id="linked_FirstName"></div>
+
+                    <form id="linked-profile-form" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
                         <fieldset class="form-group">
-                            <label for="firstname">First Name</label>
-                            <input class="form-control" type="text" id="firstname" name="firstname">
-                        </fieldset>
-                        <fieldset class="form-group">
-                            <label for="lastname">Last Name</label>
-                            <input class="form-control" type="text" id="lastname" name="lastname">
-                        </fieldset>
-                        <fieldset class="form-group">
-                            <label for="email">Email</label>
-                            <input class="form-control" type="email" id="email" name="email">
+                            <label for="email">Partners Email</label>
+                            <input class="form-control" type="email" name="email">
                         </fieldset>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary">Connect</button>
                         </div>
                     </form>
                 </div>
