--- a/app/welcome.html
+++ b/app/welcome.html
@@ -75,12 +75,14 @@
             <div class="row">
               <div class="col-lg-3 col-md-2"></div>
               <div class="col-lg-6 col-md-8">
-                <div class="input-group input-group-lg">
-                  <input type="text" class="form-control" placeholder="Email Address">
-                  <span class="input-group-btn">
-                    <button class="btn btn-primary" type="button">Go!</button>
-                  </span>
-                </div><!-- /input-group -->
+                  <form id="start-with-email" action="/profiles?filter[email]=" method="get" accept-charset="utf-8">
+                      <fieldset class="form-group col-sm-12">
+                          <input class="form-control" type="email" name="email" id="email" placeholder="Email Address">
+                      </fieldset>
+                      <div class="form-group col-sm-12">
+                          <button type="submit" class="btn btn-primary">Start now!</button>
+                      </div>
+                  </form>
               </div><!-- /.col-lg-6 -->
               <div class="col-lg-3  col-md-2"></div>
             </div><!-- /.row -->
@@ -286,6 +288,14 @@
     </div>
 </section>
 
+<!-- build:js scripts/vendor.js -->
+<!-- bower:js -->
+<script src="/bower_components/jquery/dist/jquery.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script>
     toastr.options = {
@@ -321,18 +331,12 @@
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
+<script src="scripts/profileutils.js"></script>
 <script src="scripts/creative.js"></script>
 <script src="scripts/jquery.easing.min.js"></script>
 <script src="scripts/jquery.fittext.js"></script>
 <script src="scripts/wow.min.js"></script>
 <!-- endbuild -->
 
-<!-- build:js scripts/vendor.js -->
-<!-- bower:js -->
-<script src="/bower_components/jquery/dist/jquery.js"></script>
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
 </body>
 </html>
