--- a/app/welcome.html
+++ b/app/welcome.html
@@ -16,7 +16,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="styles/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
     <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
     <link rel="stylesheet" href="styles/creative.css" type="text/css">
@@ -119,28 +119,28 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
                     <h3>Journal Entries</h3>
-                    <p class="text-muted">Regularly journal about your parners loving actions, words, deeds towards you.</p>
+                    <p class="text-muted">Regularly journal about your partner's loving actions, words, deeds towards you.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Feedback</h3>
-                    <p class="text-muted">Receive feedback about your loving actions towards your partner.</p>
+                    <p class="text-muted">Receive targeted suggestions based on your personal analytics.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Analytics</h3>
-                    <p class="text-muted">Receieve suggestions that will speak love to your partner.</p>
+                    <p class="text-muted">Receive suggestions that will speak love to your partner.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
                     <h3>Made with Love</h3>
-                    <p class="text-muted">This site was built to help us and we believe it can help you too!</p>
+                    <p class="text-muted">This site was built to help us, and we believe it can help you too!</p>
                 </div>
             </div>
         </div>
@@ -278,7 +278,7 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Contact Us!</h2>
                 <hr class="primary">
-                <p>Tell us your story or tell us how we can do better!</p>
+                <p>Tell us your story or how we can do better!</p>
             </div>
             <div class="col-lg-12 text-center">
                 <a href="mailto:hello@treasury.love"><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
