--- a/app/LoveBank.html
+++ b/app/LoveBank.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LoveBank Web</title>
+    <title>Love Journal</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -43,7 +43,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Love Bank <i class="glyphicon glyphicon-piggy-bank"></i></a>
+            <a class="navbar-brand page-scroll" href="index.html#page-top">♥ Treasury</a>
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
