--- a/app/welcome.html
+++ b/app/welcome.html
@@ -27,6 +27,11 @@
 
 <body id="page-top">
 
+<!--[if lt IE 10]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -37,7 +42,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">♥ Treasury</a>
+            <a class="navbar-brand page-scroll" href="index.html#page-top">♥ Treasury</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
