--- a/app/Profile.html
+++ b/app/Profile.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LoveBank Web</title>
+    <title>Love Journal</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
@@ -40,7 +40,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">♥ Treasury</a>
+            <a class="navbar-brand page-scroll" href="index.html#page-top">♥ Treasury</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
