--- a/app/journal.html
+++ b/app/journal.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>LoveBank Web</title>
+    <title>Love Journal</title>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">♥ Treasury</a>
+            <a class="navbar-brand page-scroll" href="index.html#page-top">♥ Treasury</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,7 +77,7 @@
           <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
             <div class="col-lg-2"></div>
             <div class="form-group col-sm-12 col-lg-8">
-              <textarea class="form-control" type="text" name="description" rows="10"></textarea>
+              <textarea class="form-control" type="text" name="description" rows="5"></textarea>
             </div>
             <div class="col-lg-2"></div>
 
