Fix on enrollment
The profile script wasn't loading

--- a/app/LinkProfile.html
+++ b/app/LinkProfile.html
@@ -50,19 +50,19 @@
                     <a class="page-scroll" href="journal.html">Journal</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#about">About</a>
+                    <a class="page-scroll" href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#services">Services</a>
+                    <a class="page-scroll" href="index.html#services">Services</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#privacy">Privacy</a>
+                    <a class="page-scroll" href="index.html#privacy">Privacy</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#contact">Contact</a>
+                    <a class="page-scroll" href="index.html#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/Profile.html">Profile</a>
+                    <a class="page-scroll" href="Profile.html">Profile</a>
                 </li>
             </ul>
         </div>
