--- a/app/Profile.html
+++ b/app/Profile.html
@@ -50,19 +50,19 @@
                     <a class="page-scroll" href="journal.html">Journal</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#about">About</a>
+                    <a class="page-scroll" href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#services">Services</a>
+                    <a class="page-scroll" href="index.html#services">Services</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#privacy">Privacy</a>
+                    <a class="page-scroll" href="index.html#privacy">Privacy</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#contact">Contact</a>
+                    <a class="page-scroll" href="index.html#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/Profile.html">Profile</a>
+                    <a class="page-scroll" href="Profile.html">Profile</a>
                 </li>
             </ul>
         </div>
@@ -151,8 +151,8 @@
 
 </script>
 
-<!-- build:js scripts/main.js -->
-<script src="scripts/main.js"></script>
+<!-- build:js scripts/profile.js -->
+<script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
 <script src="scripts/jquery.easing.min.js"></script>
 <script src="scripts/jquery.fittext.js"></script>
