--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,8 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -47,16 +48,19 @@
                     <a class="page-scroll" href="journal.html">Journal</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">Services</a>
+                    <a class="page-scroll" href="index.html#services">Services</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#privacy">Privacy</a>
+                    <a class="page-scroll" href="index.html#privacy">Privacy</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">Contact</a>
+                    <a class="page-scroll" href="index.html#contact">Contact</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="Profile.html">Profile</a>
                 </li>
             </ul>
         </div>
