--- a/app/journal.html
+++ b/app/journal.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html class="no-js" lang="">
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Love Journal</title>
 
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <!-- Custom Fonts -->
-  <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css"/>
+    <!-- Custom Fonts -->
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+          rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
+          rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" type="text/css"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css">
-    <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
+          type="text/css"/>
     <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
     <link rel="stylesheet" href="styles/creative.css" type="text/css">
     <!-- endbower -->
@@ -32,7 +35,8 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -48,19 +52,19 @@
                     <a class="page-scroll" href="journal.html">Journal</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#about">About</a>
+                    <a class="page-scroll" href="index.html#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#services">Services</a>
+                    <a class="page-scroll" href="index.html#services">Services</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#privacy">Privacy</a>
+                    <a class="page-scroll" href="index.html#privacy">Privacy</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/welcome.html#contact">Contact</a>
+                    <a class="page-scroll" href="index.html#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/Profile.html">Profile</a>
+                    <a class="page-scroll" href="Profile.html">Profile</a>
                 </li>
             </ul>
         </div>
@@ -72,26 +76,45 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-          <p>What are you giving your partner credit for and how did it speak to you?</p>
-          <h2>Journal Entry</h2>
-          <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
-            <div class="col-lg-2"></div>
-            <div class="form-group col-sm-12 col-lg-8">
-              <textarea class="form-control" type="text" name="description" rows="5"></textarea>
-            </div>
-            <div class="col-lg-2"></div>
+            <h1>Journal Entry</h1>
+            <form id="entry" action="/entries" method="post" accept-charset="utf-8" class="form-horizontal" role="form">
+                <div class="row">
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="form-group col-sm-12 col-lg-8">
+                        <span>What are you giving your partner credit for and how did it speak to you?</span>
+                        <textarea class="form-control" type="text" name="description" rows="5"></textarea>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
 
-            <div class="form-group col-sm-12" id="rating-element">
-              <label class="control-label">Entry Rating:</label>
-              <div>
-                <input id="rating" type="number" class="rating" data-size="sm" min=0 max=5 step=1 required>
-              </div>
-            </div>
+                <div class="row">
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="form-group col-sm-12 col-lg-8">
+                        <span>What are you giving your partner credit for and how did it speak to you?</span>
+                        <textarea class="form-control" type="text" name="description" rows="5"></textarea>
+                    </div>
+                    <div class="col-lg-2"></div>
 
-            <div class="form-group col-sm-12">
-              <button type="submit" class="btn btn-primary">Save Entry</button>
-            </div>
-          </form>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-2">
+                    </div>
+                    <div class="form-group col-sm-12" id="rating-element">
+                        <label class="control-label">Entry Rating:</label>
+                        <div>
+                            <input id="rating" type="number" class="rating" data-size="sm" min=0 max=5 step=1 required>
+                        </div>
+                    </div>
+                    <div class="col-lg-2"></div>
+                </div>
+
+                <div class="form-group col-sm-12">
+                    <button type="submit" class="btn btn-primary">Save Entry</button>
+                </div>
+            </form>
         </div>
     </div>
 </header>
@@ -106,34 +129,41 @@
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <script>
-  toastr.options = {
-    "closeButton": false,
-    "debug": false,
-    "newestOnTop": false,
-    "progressBar": false,
-    "positionClass": "toast-bottom-left",
-    "preventDuplicates": false,
-    "onclick": null,
-    "showDuration": "300",
-    "hideDuration": "1000",
-    "timeOut": "5000",
-    "extendedTimeOut": "1000",
-    "showEasing": "swing",
-    "hideEasing": "linear",
-    "showMethod": "fadeIn",
-    "hideMethod": "fadeOut"
-  }
+    toastr.options = {
+        "closeButton": false,
+        "debug": false,
+        "newestOnTop": false,
+        "progressBar": false,
+        "positionClass": "toast-bottom-left",
+        "preventDuplicates": false,
+        "onclick": null,
+        "showDuration": "300",
+        "hideDuration": "1000",
+        "timeOut": "5000",
+        "extendedTimeOut": "1000",
+        "showEasing": "swing",
+        "hideEasing": "linear",
+        "showMethod": "fadeIn",
+        "hideMethod": "fadeOut"
+    }
 </script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-73481201-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-73481201-1', 'auto');
+    ga('send', 'pageview');
 
 </script>
 
