--- a/app/journal.html
+++ b/app/journal.html
@@ -82,7 +82,7 @@
                     <div class="col-lg-2">
                     </div>
                     <div class="form-group col-sm-12 col-lg-8">
-                        <span>What are you giving your partner credit for and how did it speak to you?</span>
+                        <span>What are you giving your partner credit for?</span>
                         <textarea class="form-control" type="text" name="description" rows="5"></textarea>
                     </div>
                     <div class="col-lg-2"></div>
@@ -92,8 +92,8 @@
                     <div class="col-lg-2">
                     </div>
                     <div class="form-group col-sm-12 col-lg-8">
-                        <span>What are you giving your partner credit for and how did it speak to you?</span>
-                        <textarea class="form-control" type="text" name="description" rows="5"></textarea>
+                        <span>How did it speak to you?</span>
+                        <textarea class="form-control" type="text" name="emotions" rows="5"></textarea>
                     </div>
                     <div class="col-lg-2"></div>
 
