--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                     <a class="page-scroll" href="index.html#contact">Contact</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="Profile.html">Profile</a>
+                    <a class="page-scroll" id="profile_link" href="Profile.html">Profile</a>
                 </li>
             </ul>
         </div>
