--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -13,18 +13,9 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
 
-
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- build:css styles/vendor.css -->
-  <!-- bower:css -->
-  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
-        type="text/css"/>
-  <!-- endbower -->
-  <!-- endbuild -->
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
@@ -90,7 +81,8 @@
   <!-- /.container-fluid -->
 </nav>
 
-<div class="image-container set-full-height" style="background-image: url('images/open-journals1.jpg')">
+<div class="image-container set-full-height" style="background-image: url('assets/img/wizard.jpg')">
+
   <!--   Big container   -->
   <div class="container">
     <div class="row">
@@ -100,62 +92,33 @@
         <div class="wizard-container">
 
           <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-            <form id="entry" action="/entries" method="post" accept-charset="utf-8">
-              <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
 
-              <div class="wizard-header">
-                <h3>
-                  <b> JOURNAL ENTRY </b> <br>
-                </h3>
-              </div>
-              <ul>
-                <li><a href="#journal" data-toggle="tab">
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                </a></li>
-                <!--<li><a href="#address" data-toggle="tab">Address</a></li>-->
-              </ul>
+            <div class="wizard-header">
+              <h3>
+                <b>Welcome</b><br>
+              </h3>
+            </div>
+            <ul>
+              <li><a href="#account" data-toggle="tab">Profile Successfully Saved</a></li>
+            </ul>
 
-              <div class="tab-content">
-                <div class="tab-pane" id="journal">
-                  <div class="row">
-                    <h4 class="info-text"></h4>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <div class="form-group">
-                        <label for="description">What are you giving your partner credit for?</label>
-                        <textarea class="form-control" name="description" id="description" rows="5"></textarea>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <div class="form-group">
-                        <label for="emotions">How did it speak to you?</label>
-                        <textarea class="form-control" name="emotions" id="emotions" rows="5"></textarea>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <label for="rating" class="control-label">Entry Rating:</label>
-                      <div>
-                        <input id="rating" type="number" class="rating" data-size="sm" min=0 max=5 step=1 required>
-                      </div>
-                    </div>
+            <div class="tab-content">
+              <div class="tab-pane" id="account">
+                <div class="row">
+                  <h4 class="info-text"> Begin by making Journal Entries</h4>
+                  <div class="col-sm-8 col-sm-offset-2">
+                    <p>Journal entries should tell your partner how and why the it spoke to you.</p>
                   </div>
+                </div>
+              </div>
 
-                </div>
+            </div>
+            <div class="wizard-footer">
+              <div class="pull-right">
+                <a class='btn btn-finish btn-fill btn-warning btn-wd btn-md' href="Journal.html">Continue</a>
               </div>
-              <div class="wizard-footer">
-                <div class="pull-right">
-                  <input type='button' class='btn btn-next btn-fill btn-warning btn-wd btn-sm' name='next'
-                         value='Next'/>
-                  <input type='submit' class='btn btn-finish btn-fill btn-warning btn-wd btn-sm' name='finish'
-                         value='Finish'/>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </form>
+              <div class="clearfix"></div>
+            </div>
           </div>
         </div> <!-- wizard container -->
       </div>
@@ -171,15 +134,16 @@
 <!-- endbower -->
 <!-- endbuild -->
 
-<!-- build:js scripts/main.js -->
-<script src="scripts/main.js"></script>
-<!-- endbuild -->
-
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.0/jquery.validate.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
-<script src="assets/js/wizard.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap-wizard/1.2/jquery.bootstrap.wizard.min.js" type="text/javascript"></script>
 
+<!-- build:js scripts/profile.js -->
+<script src="scripts/profile.js"></script>
+<!-- endbuild -->
 </body>
+
+<script src="assets/js/wizard.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+
 </html>
