Missing build of css and js

--- a/app/Account.html
+++ b/app/Account.html
@@ -11,7 +11,15 @@
 
   <link rel="icon" type="image/png" href="assets/img/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+  <!-- build:css styles/vendor.css -->
+  <!-- bower:css -->
+  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
+        type="text/css"/>
+  <link rel="stylesheet" href="styles/creative.css" type="text/css">
   <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
+  <!-- endbower -->
+  <!-- endbuild -->
 
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -193,9 +201,8 @@
 
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
-<!-- endbuild -->
-
 <script src="assets/js/wizard.js"></script>
+<!-- endbuild -->
 
 </body>
 </html>
