--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -9,9 +9,9 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
   <meta name="viewport" content="width=device-width"/>
 
-  <link rel="icon" type="image/png" href="assets/img/favicon.ico">
+  <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
+  <link href="styles/gsdk-base.css" rel="stylesheet"/>
 
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -81,7 +81,7 @@
   <!-- /.container-fluid -->
 </nav>
 
-<div class="image-container set-full-height" style="background-image: url('assets/img/wizard.jpg')">
+<div class="image-container set-full-height" style="background-image: url('images/wizard.jpg')">
 
   <!--   Big container   -->
   <div class="container">
@@ -140,7 +140,8 @@
 
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
-<script src="assets/js/wizard.js"></script>
+<script src="scripts/creative.js"></script>
+<script src="scripts/wizard.js"></script>
 <!-- endbuild -->
 </body>
 
