--- a/app/journal.html
+++ b/app/journal.html
@@ -9,7 +9,7 @@
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
   <meta name="viewport" content="width=device-width"/>
 
-  <link rel="icon" type="image/png" href="assets/img/favicon.ico">
+  <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
 
@@ -24,7 +24,7 @@
   <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
         type="text/css"/>
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
-  <link href="assets/css/gsdk-base.css" rel="stylesheet"/>
+  <link href="styles/gsdk-base.css" rel="stylesheet"/>
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -175,7 +175,7 @@
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
-<script src="assets/js/wizard.js"></script>
+<script src="scripts/wizard.js"></script>
 <!-- endbuild -->
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
