Not sure what's happening with dist
Had to lave scripts in the asset folder.

--- a/app/Account.html
+++ b/app/Account.html
@@ -17,6 +17,11 @@
   <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
         type="text/css"/>
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="styles/gsdk-base.css" rel="stylesheet"/>
   <!-- endbower -->
   <!-- endbuild -->
@@ -202,7 +207,10 @@
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
-<script src="scripts/wizard.js"></script>
+<!-- endbuild -->
+
+<!-- build:js scripts/wizard.js -->
+<script src="assets/js/wizard.js"></script>
 <!-- endbuild -->
 
 </body>
