--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -11,7 +11,12 @@
 
   <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="styles/gsdk-base.css" rel="stylesheet"/>
+  <!-- endbower -->
+  <!-- endbuild -->
 
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -141,8 +146,12 @@
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
-<script src="scripts/wizard.js"></script>
 <!-- endbuild -->
+
+<!-- build:js scripts/wizard.js -->
+<script src="assets/js/wizard.js"></script>
+<!-- endbuild -->
+
 </body>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
