--- a/app/journal.html
+++ b/app/journal.html
@@ -12,8 +12,6 @@
   <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
-
-
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -21,9 +19,13 @@
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
-  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
-        type="text/css"/>
+  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- build:css styles/gsdk-base.css -->
+  <!-- bower:css -->
   <link href="styles/gsdk-base.css" rel="stylesheet"/>
   <!-- endbower -->
   <!-- endbuild -->
@@ -175,7 +177,10 @@
 
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
-<script src="scripts/wizard.js"></script>
+<!-- endbuild -->
+
+<!-- build:js scripts/wizard.js -->
+<script src="assets/js/wizard.js"></script>
 <!-- endbuild -->
 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
