More spelling mistakes

--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -112,7 +112,7 @@
                 <div class="row">
                   <h4 class="info-text"> Begin by making Journal Entries</h4>
                   <div class="col-sm-8 col-sm-offset-2">
-                    <p>Journal entries should tell your partner how and why their spoke to you.</p>
+                    <p>Journal entries should tell your partner how and why their action spoke to you.</p>
                   </div>
                 </div>
               </div>
