Fix for toastr notifications

--- a/app/journal.html
+++ b/app/journal.html
@@ -21,6 +21,7 @@
   <!-- bower:css -->
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
   <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
+  <link href="/bower_components/toastr/toastr.min.css" media="all" rel="stylesheet" type="text/css"/>
   <!-- endbower -->
   <!-- endbuild -->
 
