--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -18,6 +18,15 @@
   <!-- endbower -->
   <!-- endbuild -->
 
+  <!-- build:css styles/vendor.css -->
+  <!-- bower:css -->
+  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
+        type="text/css"/>
+  <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <link href="/bower_components/toastr/toastr.min.css" media="all" rel="stylesheet" type="text/css"/>
+  <!-- endbower -->
+  <!-- endbuild -->
+
   <!-- Custom Fonts -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
