--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         type="text/css"/>
   <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
   <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <link href="/bower_components/toastr/toastr.min.css" media="all" rel="stylesheet" type="text/css"/>
   <!-- endbower -->
   <!-- endbuild -->
 
