--- a/app/AccountSuccess.html
+++ b/app/AccountSuccess.html
@@ -88,6 +88,9 @@
         <li>
           <a class="page-scroll" id="profile_link" href="Account.html">Account</a>
         </li>
+        <li>
+          <a class="page-scroll" id="logout_link" style="display: none" href="logout.html">Logout</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -153,6 +156,7 @@
 <!-- build:js scripts/profile.js -->
 <script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
+<script src="scripts/love_bank_common.js"></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/wizard.js -->
