--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,9 @@
         <li>
           <a class="page-scroll" id="profile_link" href="Account.html">Account</a>
         </li>
+        <li>
+          <a class="page-scroll" id="logout_link" style="display: none" href="logout.html">Logout</a>
+        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -353,6 +356,7 @@
 <!-- build:js scripts/main.js -->
 <script src="scripts/main.js"></script>
 <script src="scripts/creative.js"></script>
+<script src="scripts/love_bank_common.js"></script>
 <!-- endbuild -->
 
 </body>
