--- a/app/logout.html
+++ b/app/logout.html
@@ -12,24 +12,24 @@
   <link rel="icon" type="image/png" href="images/favicon.ico">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
-  <!-- Custom Fonts -->
-  <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- build:css styles/vendor.css -->
-  <!-- bower:css -->
-  <link rel="stylesheet" href="styles/creative.css" type="text/css">
-  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet" type="text/css"/>
-  <link href="/bower_components/toastr/toastr.min.css" media="all" rel="stylesheet" type="text/css"/>
-  <!-- endbower -->
-  <!-- endbuild -->
-
   <!-- build:css styles/gsdk-base.css -->
   <!-- bower:css -->
   <link href="styles/gsdk-base.css" rel="stylesheet"/>
   <!-- endbower -->
   <!-- endbuild -->
+
+  <!-- build:css styles/vendor.css -->
+  <!-- bower:css -->
+  <link href="/bower_components/bootstrap-star-rating/css/star-rating.min.css" media="all" rel="stylesheet"
+        type="text/css"/>
+  <link rel="stylesheet" href="styles/creative.css" type="text/css">
+  <link href="/bower_components/toastr/toastr.min.css" media="all" rel="stylesheet" type="text/css"/>
+  <!-- endbower -->
+  <!-- endbuild -->
+
+  <!-- Custom Fonts -->
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
@@ -51,7 +51,7 @@
   </script>
 </head>
 
-<body id="page-top">
+<body id="page-top" onload="logout();">
 
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -88,9 +88,6 @@
         <li>
           <a class="page-scroll" id="profile_link" href="Account.html">Account</a>
         </li>
-        <li>
-          <a class="page-scroll" id="logout_link" style="display: none" href="logout.html">Logout</a>
-        </li>
       </ul>
     </div>
     <!-- /.navbar-collapse -->
@@ -98,7 +95,8 @@
   <!-- /.container-fluid -->
 </nav>
 
-<div class="image-container set-full-height" style="background-image: url('images/open-journals1.jpg')">
+<div class="image-container set-full-height" style="background-image: url('images/wizard.jpg')">
+
   <!--   Big container   -->
   <div class="container">
     <div class="row">
@@ -108,62 +106,27 @@
         <div class="wizard-container">
 
           <div class="card wizard-card ct-wizard-orange" id="wizardProfile">
-            <form id="entry" action="/entries" method="post" accept-charset="utf-8">
-              <!--        You can switch "ct-wizard-orange"  with one of the next bright colors: "ct-wizard-blue", "ct-wizard-green", "ct-wizard-orange", "ct-wizard-red"             -->
 
-              <div class="wizard-header">
-                <h3>
-                  <b> JOURNAL ENTRY </b> <br>
-                </h3>
-              </div>
-              <ul>
-                <li><a href="#journal" data-toggle="tab">
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                  <i class="fa fa-envira" aria-hidden="true"></i>
-                </a></li>
-                <!--<li><a href="#address" data-toggle="tab">Address</a></li>-->
-              </ul>
+            <div class="wizard-header">
+              <h3>
+                <b>Goodbye</b><br>
+              </h3>
+            </div>
+            <ul>
+              <li><a href="#account" data-toggle="tab">Logout Successful</a></li>
+            </ul>
 
-              <div class="tab-content">
-                <div class="tab-pane" id="journal">
-                  <div class="row">
-                    <h4 class="info-text"></h4>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <div class="form-group">
-                        <label for="description">What are you giving your partner credit for?</label>
-                        <textarea class="form-control" name="description" id="description" rows="5"></textarea>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <div class="form-group">
-                        <label for="emotions">How did it speak to you?</label>
-                        <textarea class="form-control" name="emotions" id="emotions" rows="5"></textarea>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-10 col-sm-offset-1">
-                      <label for="rating" class="control-label">Entry Rating:</label>
-                      <div>
-                        <input id="rating" type="number" class="rating" data-size="sm" min=0 max=5 step=1 required>
-                      </div>
-                    </div>
-                  </div>
-
+            <div class="tab-content">
+              <div class="tab-pane" id="account">
+                <div class="row">
+                  <h4 class="info-text"> You have been successfully logged out.</h4>
                 </div>
               </div>
-              <div class="wizard-footer">
-                <div class="pull-right">
-                  <input type='button' class='btn btn-next btn-fill btn-warning btn-wd btn-sm' name='next'
-                         value='Next'/>
-                  <input type='submit' class='btn btn-finish btn-fill btn-warning btn-wd btn-sm' name='finish'
-                         value='Finish'/>
-                </div>
-                <div class="clearfix"></div>
-              </div>
-            </form>
+
+            </div>
+            <div class="wizard-footer">
+              <div class="clearfix"></div>
+            </div>
           </div>
         </div> <!-- wizard container -->
       </div>
@@ -181,14 +144,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/FitText.js/1.2.0/jquery.fittext.js" type="text/javascript"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" type="text/javascript"></script>
 
-<!-- build:js scripts/star-rating.js -->
-<!-- bower:js -->
-<script src="/bower_components/bootstrap-star-rating/js/star-rating.min.js"></script>
-<!-- endbower -->
-<!-- endbuild -->
-
-<!-- build:js scripts/main.js -->
-<script src="scripts/main.js"></script>
+<!-- build:js scripts/profile.js -->
+<script src="scripts/profile.js"></script>
 <script src="scripts/creative.js"></script>
 <script src="scripts/love_bank_common.js"></script>
 <!-- endbuild -->
@@ -196,26 +153,6 @@
 <!-- build:js scripts/wizard.js -->
 <script src="assets/js/wizard.js"></script>
 <!-- endbuild -->
-
-<script>
-  toastr.options = {
-    "closeButton": false,
-    "debug": false,
-    "newestOnTop": false,
-    "progressBar": false,
-    "positionClass": "toast-bottom-left",
-    "preventDuplicates": false,
-    "onclick": null,
-    "showDuration": "300",
-    "hideDuration": "1000",
-    "timeOut": "5000",
-    "extendedTimeOut": "1000",
-    "showEasing": "swing",
-    "hideEasing": "linear",
-    "showMethod": "fadeIn",
-    "hideMethod": "fadeOut"
-  }
-</script>
 
 </body>
 </html>
