Add overlay to image header for readability

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
 </nav>
 
 <header>
+  <div class="background-overlay"></div>
   <div class="header-content">
     <div class="header-content-inner">
       <h1>Love Treasury!</h1>
